<resources>
    <string name="app_name">DriveSense</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="pressButton">Press the Start button before starting your drive.</string>
    <string name="title_activity_drive_rating">Your Drive Rating</string>
    <string name="title_activity_history">History</string>
    <string name="action_settings">Settings</string>
    <string name="fontfile">fonts/JosefinSans-Light.ttf</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="setting">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat"> Repeat Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>

    <string name="error_login_failed">Please make sure there is internet connection and check your credentials</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password cannot be empty</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_mismatch_password">This passwords are not matching</string>

    <string name="error_field_required">This field is required</string>
    <string name="title_activity_user">User</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="more">More...</string>
    <string name="login_failed">Login failed: Make sure your email and password are correct.</string>
    <string name="sign_in_description">Sign in/up to record history trips and automatically upload to website.</string>

    <string name="facebook_app_id">1788457604730877</string>
    <string name="google_server_client_id">83228343356-ooeejimtmb7cn3bsnkr06ve67nip7e6o.apps.googleusercontent.com</string>
    <string name="fb_login_protocol_scheme">fb1788457604730877</string>
</resources>
