<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/sign_in_description"
                android:id="@+id/sign_in_label"
                />
            <!-- Email -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_parent"
                android:layout_below="@id/sign_in_label">
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <!-- password -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_parent"
                android:layout_below="@id/email_parent">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:text="@string/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_parent"
                android:id="@+id/sign_in_button" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom"
                android:layout_below="@id/sign_in_button"
                android:layout_alignParentBottom="true">

                <LinearLayout
                    android:id="@+id/social_layout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/google_button"
                        android:text="Connect With Google"
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/facebook_button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Connect with Facebook" />

                </LinearLayout>

                <Button
                    android:text="@string/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sign_up_button" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>